syntax = "proto3";

package userauth;

option go_package = "userauth/proto;userauth";

service UserAuth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}